@@ -2,14 +2,14 @@
 Hash: SHA1
 
 DIST mpdcron-0.3.tar.bz2 315412 RMD160 e2c4487ec6032fa7b50e4ffe7e03ff678f4e50e3 SHA1 05aea3bdec0c326ebd3cf9a7372d628c8727b66a SHA256 0d3ee40364f4748a18079277570f4e361928ff6216ad2450a49625f2dc954c5a
-EBUILD mpdcron-0.3.ebuild 1004 RMD160 07493a322ad3b9da286336cf5b962416784e53fe SHA1 3ddaf43c80f6de673221c16a6f3ba70467205911 SHA256 b0eedae525121b5abdfb3850050b24e9f7b6bd8eb03b20896392dae984836d88
-EBUILD mpdcron-9999.ebuild 918 RMD160 80fbe5adc7b155b65af583242f6452a2d2627af5 SHA1 c893f74662a93b62c431c302ef8d5c33b295645e SHA256 34833ef245749f88f65f2673e1c378e568d3d63ae9c2624d4118c84a4d045a01
-MISC ChangeLog 410 RMD160 911a03c31f58639a8577b38e1b032b879d0cde53 SHA1 35e2085800bb5eac08a2dc8969f966efa1f94aa0 SHA256 29f83e683045b50902d8da5af89eadf27f434695668469197c55e1986f6a23c8
-MISC metadata.xml 529 RMD160 45ce2347114413074a7057da73f6c0f3d1bffa6d SHA1 cee67e08cb68e88c474f3056af721cb174d5c950 SHA256 0f40a01391d74c794d65127db3290cddfb4c6a511043f82a7d6e2f4dfd2b072e
+EBUILD mpdcron-0.3.ebuild 1479 RMD160 e20ebd3d396ec2878e9a1e4a5a7e7c834ea8e68c SHA1 e635ea2cb47304caca9dbb3c307876de1a624b54 SHA256 6d97504b7fadda6758f892ebc4f8dd519ca75d1207d670c24c59475acbb4c63f
+EBUILD mpdcron-9999.ebuild 1393 RMD160 5fb8fc6f8b2d1a46d15fa6b3223bcac6aaf86892 SHA1 1bd9a6e035b796566c3826ba6b7ab27d59dfd986 SHA256 d8cd7e6987eec135ded70b4432a4647a553dc503db78c076542c22368fb8fc01
+MISC ChangeLog 575 RMD160 9e59cc4825299ba01b16a4d9b19f34870871e410 SHA1 4173c3a11888bdf04bb9ae14ad48eecc12fa0514 SHA256 46e26102a5126f19f1eac9f9c875e2f1a46efb11883fd9b0ed9a32e00b11501c
+MISC metadata.xml 629 RMD160 eece232d78917cb22f1931f5ebd9f13342e56d0d SHA1 61d64ace73116e2b3d4dfc4faebfb50ffa0ea856 SHA256 050ca3e8e384f58b3446b70637c75614ddc66a1bb477ee2ea1e96cb5407700e9
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.11 (GNU/Linux)
 
-iEYEARECAAYFAktIqxsACgkQzJrj3cAXR0mJqgCfcYHn+tsUMMnqXYDy3icZzS1A
-x+wAnjd1/96WrujysYKKxCm/eqYxx0uk
-=bnas
+iEYEARECAAYFAktIsw4ACgkQzJrj3cAXR0nj2wCeMkkQ8OoQcQZUlr8Sgx/kc0Lt
+LJ8An1yYJagBOxHvQOBPO48Ic+qkFv/D
+=e8uv
 -----END PGP SIGNATURE-----
