@@ -15,16 +15,33 @@ SRC_URI=""
 LICENSE="GPL-2"
 SLOT="0"
 KEYWORDS="~amd64 ~x86"
-IUSE="zsh-completion"
+IUSE="libnotify scrobbler zsh-completion"
 
 DEPEND="${RDEPEND}
 	dev-util/pkgconfig"
-RDEPEND=">=dev-libs/glib-2.16
-	>=dev-libs/libdaemon-0.12
-	>=media-libs/libmpdclient-2.1"
+RDEPEND=">=dev-libs/glib-2.18
+	>=dev-libs/libdaemon-0.13
+	>=media-libs/libmpdclient-2.1
+	libnotify? ( x11-libs/libnotify )
+	scrobbler? ( net-misc/curl )"
 
 src_prepare() {
 	eautoreconf
+}
+
+src_configure() {
+	local mods modnames moduse
+
+	# stats module isn't currently supported, as I can't test it.
+	modnames=(notification "")
+	moduse=(libnotify scrobbler)
+	for mod in $(seq 0 $(( ${#modnames[@]} - 1))); do
+		if use ${moduse[${mod}]}; then
+			mods=${mods:+${mods},}${modnames[${mod}]:-${moduse[${mod}]}}
+		fi
+	done
+	econf --enable-gmodule \
+		--with-standard-modules=${mods}
 }
 
 src_install() {
