@@ -1,5 +1,5 @@
 dev-util/pkgconfig =sys-devel/automake-1.10* >=sys-devel/autoconf-2.61 sys-devel/libtool >=dev-util/git-1.6
->=dev-libs/glib-2.16 >=dev-libs/libdaemon-0.12 >=media-libs/libmpdclient-2.1
+>=dev-libs/glib-2.18 >=dev-libs/libdaemon-0.13 >=media-libs/libmpdclient-2.1 libnotify? ( x11-libs/libnotify ) scrobbler? ( net-misc/curl )
 0
 
 
@@ -8,13 +8,13 @@ GPL-2
 A hook daemon for mpd, it polls mpd and runs hooks on events
 ~amd64 ~x86
 autotools eutils git libtool multilib portability toolchain-funcs
-zsh-completion
+libnotify scrobbler zsh-completion
 
 
 
 2
 
-install prepare unpack
+configure install prepare unpack
 
 
 
