@@ -2,3 +2,4 @@
 dev-python/restview:pygments - Enable support for code blocks with highlighting using pygments
 mail-client/notmuch:vim - Install the vim interface for notmuch
 media-gfx/aafigure:docutils - Adds a directive for aafigure support to docutils
+media-sound/mpdcron:scrobbler - Enable support for last.fm aka audioscrobbler
