@@ -2,6 +2,10 @@
 # Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+  09 Jan 2010; James Rowe <jnrowe@gmail.com> mpdcron-0.3.ebuild,
+  mpdcron-9999.ebuild, metadata.xml:
+  Added support for building libnotify and scrobbler modules.
+
 *mpdcron-9999 (09 Jan 2010)
 
   09 Jan 2010; James Rowe <jnrowe@gmail.com> +mpdcron-9999.ebuild:
